--- a/src/styles/bottomText.css
+++ b/src/styles/bottomText.css
@@ -1,10 +1,23 @@
 ﻿@import url('variables.css');
 
-@media screen and (min-width: 1440px) {
+@media screen and (min-width: 320px) {
     h2 {
         font-family: 'Montserrat', sans-serif;
-        font-size: var(--t1-montserrat-text-size);
+        font-size: 16px;
         font-weight: var(--semibold-font-weight);
+        margin-bottom: 2px;
+    }
+
+    .bottomInfo {
+        border-left: 1px solid var(--main-white);
+        padding: 0 8px;
+        width: 90px;
+    }
+}
+
+@media screen and (min-width: 1440px) {
+    h2 {
+        font-size: 30px;
         margin-bottom: 28px;
     }
 
@@ -13,6 +26,13 @@
         padding: 0 24px;
         width: 200px;
     }
+}
 
-
+@media screen and (min-width: 1600px) {
+    h2 {
+        font-family: 'Montserrat', sans-serif;
+        font-size: var(--t1-montserrat-text-size);
+        font-weight: var(--semibold-font-weight);
+        margin-bottom: 28px;
+    }
 }
