--- a/src/styles/button.css
+++ b/src/styles/button.css
@@ -1,35 +1,123 @@
 @import url('variables.css');
 
 @media screen and (min-width: 320px) {
-    
-}
-
-@media screen and (min-width: 1440px) {
     button {
         position: relative;
-        width: 380px;
-        height: 71px;
+        width: 126px;
+        height: 30px;
         border-radius: 0;
         font-family: 'Raleway', sans-serif;
         font-weight: var(--semibold-font-weight);
-        font-size: var(--t1-raleway-text-size);
-        padding: 25px 24px;
+        font-size: 10px;
+        padding: 8px 0px;
         display: flex;
         justify-content: flex-start;
-        cursor: pointer;
         
         svg {
             position: absolute;
+            height: 31px;
         }
 
         #line {
             top: 0;
+            left: 97px;
+        }
+
+        #arrow {
+            top: 16px;
+            left: 113px;
+            width: 8px;
+            height: 8px;
+        }
+    }
+
+    .white {
+        border: none;
+        padding-left: 20px;
+        outline: 1px solid var(--main-white);
+        background: var(--main-white);
+        color: var(--accent-color);
+    }
+
+    .transparent {
+        border: none;
+        padding-left: 8px;
+        outline: 1px solid var(--main-white);
+        background: transparent;
+        color: var(--main-white);
+    }
+
+    .mobileForm {
+        width: 251px;
+        height: 47px;
+        font-size: 14px;
+        line-height: 17px;
+        padding: 16px 11px;
+        svg {
+            position: absolute;
+            height: 47px;
+        }
+
+        #line {
+            top: 0;
+            left: 207px;
+        }
+
+        #arrow {
+            top: 25px;
+            left: 229px;
+            width: 13px;
+            height: 13px;
+        }
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    button {
+        width: 251px;
+        height: 47px;
+        font-size: 14px;
+        padding: 16px 11px;
+        
+        svg {
+            position: absolute;
+            height: 47px;
+        }
+
+        #line {
+            top: 0;
+            left: 207px;
+        }
+
+        #arrow {
+            top: 25px;
+            left: 229px;
+            width: 13px;
+            height: 13px;
+        }
+    }
+}
+
+@media screen and (min-width: 1440px) {
+    button {
+        width: 380px;
+        height: 71px;
+        border-radius: 0;
+        font-size: var(--t1-raleway-text-size);
+        padding: 25px 24px;
+        cursor: pointer;
+
+        #line {
+            top: 0;
             left: 308px;
+            height: 71px;
         }
 
         #arrow {
             top: 38px;
             left: 347px;
+            width: 20px;
+            height: 20px;
         }
     }
 
@@ -47,41 +135,3 @@
         color: var(--main-white);
     }
 }
-
-
- /* position: absolute;
- width: 71px;
- height: 0px;
- left: 608px;
- top: 586px;
-
- border: 2px solid #0B3461;
- transform: rotate(90deg); */
-
-
- /* Записаться на консультацию */
-
- /* position: absolute;
- width: 256px;
- height: 22px;
- left: 324px;
- top: 611px;
-
- font-weight: 600;
- font-size: 18px;
- line-height: 122.8%; */
- /* or 22px */
-/* 
- color: #07305D; */
-
-
-
- /* Vector */
-
- /* position: absolute;
- width: 20px;
- height: 20px;
- left: 647px;
- top: 624px; */
-
-/* border: 2px solid #0B3461; */
