--- a/src/styles/consultMenu.css
+++ b/src/styles/consultMenu.css
@@ -1,8 +1,8 @@
 ﻿@import url('variables.css');
 
-@media screen and (min-width: 1440px) {
+@media screen and (min-width: 320px) {
     .popup {
-        width: 33%;
+        width: 100%;
         height: 100vh;
         background-color: var(--tertiary-color);
         position: absolute;
@@ -12,77 +12,51 @@
     }
 
     .closeBtn {
-        width: 30px;
-        height: 30px;
+        width: 19px;
+        height: 20px;
         background: transparent;
         border: none;
         outline: none;
-        cursor: pointer;
         position: absolute;
         z-index: 4;
         top: 20px;
         left: 80%;
     }
 
+    .closeBtn > svg {
+        width: 19px;
+        height: 20px;
+    }
+
     #feedback {
-        margin: 108px 0 0 0;
-    }
-
-    #feedbackSent {
-        margin: 199px 0 0 0;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-
-    #feedbackSent > h2 {
-        width: 45%;
-        font-family: 'Raleway', sans-serif;
-        font-size: 50px;
-        line-height: 79px;
-        text-align: center;
-    }
-
-    #feedbackSent > h2 + h2 {
-        width: 70%;
-        font-size: 40px;
-    }
-
-    #feedbackSent > img {
-        position: absolute;
-        top: 90%;
-        left: 60%;
+        margin: 96px 0 0 34px;
     }
 
     #popupHeader {
         font-family: 'Raleway', sans-serif;
-        margin: 0 0 66px 90px;
-        font-size: 50px;
-        line-height: 75px;
-        width: 490px;
-    }
-
-    #formWrapper {
-        margin-left: 75px;
+        margin: 0 0 49px 0;
+        font-size: 20px;
+        line-height: 30px;
+        width: 195px;
     }
 
     form {
         display: flex;
         flex-direction: column;
-        gap: 65px;
+        gap: 30px;
         width: 90%;
-        margin-bottom: 89px;
+        margin-bottom: 55px;
     }
 
     input[type=text], input[type=tel] {
-        height: 37px;
+        height: 20px;
         background: transparent;
         outline: none;
         border: none;
         color: #FFFFFFCC;
         border-bottom: 1px solid #FFFFFFCC;
         font-family: 'Montserrat', sans-serif;
-        font-size: 20px;
+        font-size: 12px;
     }
 
     input[type=checkbox] {
@@ -91,17 +65,19 @@
 
     label {
         font-family: 'Montserrat', sans-serif;
-        font-size: 16px;
+        font-size: 12px;
         display: flex;
         align-items: center;
         gap: 23px;
-        line-height: 20px;
+        line-height: 15px;
+        color: var(--main-white);
+        opacity: 0.7;
     }
 
     #customCheckbox {
         display: inline-block;
-        width: 35px;
-        height: 30px;
+        width: 25px;
+        height: 15px;
         border: 1px solid var(--main-white);
         position: relative;
 
@@ -111,6 +87,8 @@
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
+            width: 15px;
+            height: 15px;
         }
     }
 
@@ -127,6 +105,126 @@
         margin-top: 30px;
         font-family: 'Montserrat', sans-serif;
         color: rgb(203, 51, 51)
+    }
+
+    #feedbackSent {
+        margin: 80px 0 0 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    #feedbackSent > h2 {
+        width: 45%;
+        font-family: 'Raleway', sans-serif;
+        font-size: 20px;
+        line-height: 40px;
+        text-align: center;
+    }
+
+    #feedbackSent > h2 + h2 {
+        width: 80%;
+        font-size: 16px;
+    }
+
+    #feedbackSent > img {
+        position: absolute;
+        top: 90%;
+        left: 40%;
+    }
+}
+
+
+@media screen and (min-width: 1440px) {
+    .popup {
+        width: 33%;
+    }
+
+    .closeBtn {
+        width: 30px;
+        height: 30px;
+    }
+
+    #feedback {
+        margin: 108px 0 0 0;
+    }
+
+    #feedbackSent {
+        margin: 199px 0 0 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    #feedbackSent > h2 {
+        width: 45%;
+        font-family: 'Raleway', sans-serif;
+        font-size: 40px;
+        line-height: 79px;
+        text-align: center;
+    }
+
+    #feedbackSent > h2 + h2 {
+        width: 70%;
+        font-size: 30px;
+    }
+
+    #feedbackSent > img {
+        position: absolute;
+        top: 90%;
+        left: 60%;
+    }
+
+    #popupHeader {
+        margin: 0 0 66px 15%;
+        font-size: 40px;
+        line-height: 75px;
+        width: 450px;
+    }
+
+    #formWrapper {
+        margin-left: 75px;
+    }
+
+    form {
+        gap: 65px;
+        width: 90%;
+        margin-bottom: 89px;
+    }
+
+    input[type=text], input[type=tel] {
+        height: 37px;
+        font-size: 20px;
+    }
+
+    label {
+        font-size: 16px;
+        line-height: 20px;
+    }
+
+    #customCheckbox {
+        width: 35px;
+        height: 30px;
+
+        svg {
+            width: 21px;
+            height: 19px;
+        }
+    }
+}
+
+
+@media screen and (min-width: 1600px) {
+    #popupHeader {
+        font-size: 50px;
+    }
+
+    #feedbackSent > h2 {
+        font-size: 50px;
+    }
+
+    #feedbackSent > h2 + h2 {
+        font-size: 40px;
     }
 }
 
