--- a/src/styles/navigation.module.css
+++ b/src/styles/navigation.module.css
@@ -1,10 +1,29 @@
 ﻿@import url('variables.css');
 
-@media screen and (min-width: 1440px) {
+@media screen and (min-width: 320px) {
     nav {
         display: flex;
         justify-content: space-between;
         align-items: center;
+    }
+
+    #logo {
+        width: 96px;
+        height: 20px;
+    }
+
+    #addInfo {
+        margin: 0 17px 0 0;
+        display: flex;
+        align-items: center;
+        gap: 10px;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    #logo {
+        width: 170px;
+        height: 34px;
     }
 
     a {
@@ -21,9 +40,8 @@
         gap: 30px;
     }
 
-    #phone {
-        display: flex;
-        align-items: center;
+    #addInfo {
+        margin: 0;
         gap: 14px;
     }
 
