--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -19,6 +19,7 @@
   #wrapper {
     width: 288px;
     margin: 0 auto;
+    padding: 20px 0 0 15px;
   }
 
   #mainContent {
@@ -46,7 +47,7 @@
   #mentor {
     position: absolute;
     z-index: -1;
-    bottom: -35%;
+    bottom: -50%;
     left: 0%;
     transform: scale(50%);
   }
@@ -68,6 +69,7 @@
   #wrapper {
     width: 824px;
     margin: 0 auto;
+    padding-top: 40px;
   }
 
   #mainContent {
